objects/Option__c.object
<CustomObject>
    <fields>
        <fullName>MessageLive__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>MessageLive</label>
        <referenceTo>MessageLive__c</referenceTo>
        <relationshipLabel>Options</relationshipLabel>
        <relationshipName>Options</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Option_No__c</fullName>
        <label>Option No</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Technics</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>